<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:gravity="center_vertical">

    <Button
        android:id="@+id/goMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="1"
        android:onClick="moveFunc"
        android:text="@string/go_main"
        android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/goP1BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="@string/go_p1"
            android:textStyle="bold" />
        <Button
            android:id="@+id/goP2BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="@string/go_p2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/goP3BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="@string/go_p3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goP4BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="@string/go_p4"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/goP5BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="실습 5번"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goP6BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="실습 6번"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/goP7BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="실습 7번"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goP8BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="moveFunc"
            android:text="센서값 측정"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/lecture"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>
